Clear caches again and log imports to troubleshoot intermittent folder import issue in tests
Improve generics on SimpleModule and SpringModule